/*
 * $Id: ChangeLog,v 1.3108 2004/06/23 18:13:59 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-24 01:58 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/filesys.c
    ! Fixed (?) to compile under OpenWatcom.

2004-06-23 14:13 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/hbserial.prg
    * Corrected situation where a restored array had logicals in the last
      few elements.
  * include/hbver.h
    * Refreshed.

2004-06-23 12:58 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/transfrm.c
    ! Fix for masks without space separator between picture's function
      and mask (i.e. "@B99.99").

2004-06-23 18:08 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/gtdos/gtdos.c
    ! Fixed hb_gt_xGetXY() on DJGPP.

2004-06-23 17:20 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/inkey.c
    ! hb_inkeyNext() now returns -99 if no char available in kb buffer.
      This is to avoid ambiguity with chr(0).
      The following code does not hang anymore:
        proc main
          __keyboard(chr(0))
          inkey(0)
        return

  * include/hbver.h
    * Refreshed.

2004-06-23 10:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/compiler/hbusage.c
    * Updated my email address in the credits.

2004-06-22 12:25 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * xharbour/source/vm/hvm.c
    + Added few missing asInteger.length initializations.
    + added few missing braces.
  * include/hbver.h
    * Refreshed.

2004-06-22 12:40 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * tests\rline1.prg
    ! Fixed wrong function name

2004-06-22 08:40 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Reverted back the changes to ::AColInfo() which now adds a column as